<resources>
    <string name="app_name">德晟金服</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="double_tap_to_exit">再按一次退出程序</string>
    <string name="msg_opreation_timeout">与服务器连接超时，请稍后重试</string>
    <string name="network_not_available">无法连接到网络，请检查网络配置</string>
    <string name="auth_expire">您的用户授权已过期，请重新登录</string>
    <string name="opreation_failure">服务器访问异常，请稍后重试</string>
    <string name="find_getverifycode">获取口令</string>
    <string name="msg_new_phone_num_empty">请输入新手机号码</string>
    <string name="msg_verify_code_empty">请输入验证码</string>
    <string name="msg_old_login_pwd_empty">请输入原登录密码</string>
    <string name="msg_new_login_pwd_empty">请输入新登录密码</string>
    <string name="msg_repeat_new_login_pwd_empty">请再次输入新登录密码</string>
    <string name="msg_different_new_login_pwd">两次输入的密码不一致，请重新输入</string>
    <string name="msg_old_pay_pwd_empty">请输入原交易密码</string>
    <string name="msg_new_pay_pwd_empty">请输入新交易密码</string>
    <string name="msg_repeat_new_payment_pwd_empty">请再次输入新交易密码</string>
    <string name="msg_getcash_input_money">请输入提现金额</string>
    <string name="msg_getcash_input_pwd">请输入交易密码</string>
    <string name="msg_charge_input_money">请输入大于50的金额</string>
    <string name="msg_phone_number">请输入您的手机号码</string>

    <string name="gonggao_more">更多  >>  </string>

    <string name="msg_pwd_pattern_check">密码是6-20个字符（字母、数字、符号的组合），不能单独使用字母、数字或符号!</string>
    <string name="msg_password_length_check">密码长度必须是6-20位</string>

    <!-- 分享字串 -->
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="share_failed">分享失败</string>

    <string name="log_out">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="browse">修改</string>
    <string name="delete">删除</string>

    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>

    <string name="new_version_detected">检测到新版本 </string>
    <string name="download_background">后台下载</string>
    <string name="remind_me_later">下次再说</string>
    <string name="register">同意并愿意遵守本站</string>
    <string name="recharge1">重要提示，充值前请确认充值银行卡与注册账户信息一致，以防持卡人信息不一致而导致提现失败。</string>
    <string name="title_screen">筛选</string>
    <string name="company_one">平台简介
    中众投以“助力实体经济发展，缓解中小企业融资难”为服务宗旨，秉承“政府引导、市场运作”的经营理念，在成立之日起，就以支持实业为己任，力争打通社会闲散资金与实体产业的通道，使资金真正能够流向国家鼓励的产业，造福社会。投资平台上的项目，不仅可以获得安全稳健的高收益同时也支持了响应了国家政策，依托政府项目来源、风控体系和团队优势，通过“O2O运营模式”架起政府、小微企业与投资者之间合规、安全、高效、透明的投融资桥梁，着力打造开放式、现代化、信息化的在线投融资平台。</string>

    <string name="tiemr_start">距投资结束还有：</string>

    <!--充值页面-->
    <string name="recharge_title">充值</string>
    <string name="recharge_record">快捷充值记录</string>
    <string name="recharge_unit">元</string>
    <string name="recharge_money">充值金额</string>
    <string name="recharge_hint">请输入充值金额</string>
    <string name="button">前往充值</string>
    <string name="account">您的渤海银行存管账户为</string>
    <string name="recharge_money_unit">充值金额(元)</string>
    <string name="recharge_date">充值时间</string>
    <string name="recharge_status">状态</string>
    <string name="recharge_type">充值方式</string>
    <string name="fast_type">快捷充值</string>
    <string name="big_type">转账充值(大额充值)</string>
    <string name="big_type_word">（大额充值）</string>
    <string name="transfer">转账充值步骤:</string>
    <string name="transfer_word1">1、使用您已绑定存管账户的银行卡给德晟金服渤海银行账号进行转账充值，一般2小时内即可到账；
      支持网银转账、手机银行转账、柜台转账；（不支持ATM、支付宝、微信转账）</string>
    <string name="transfer_word2">2、核对充值资金到账情况，充值资金到账后，即可进行出借投资；</string>
    <string name="make_collections">收款账户信息:</string>
    <string name="make_collections_name1_word">收款方开户行</string>
    <string name="make_collections_name2_word">收款方户名</string>
    <string name="make_collections_name3_word">收款账号</string>
    <string name="make_collections_name1">渤海银行深圳分行</string>
    <string name="make_collections_name2">深圳市德晟互联网金融服务有限公司</string>
    <string name="make_collections_name3">99038000017444340</string>


    <string name="percent_1">1%</string>
    <string name="percent_2">2%</string>
    <string name="percent_3">3%</string>
    <string name="percent_4">4%</string>
    <string name="percent_5">5%</string>
    <string name="percent_6">6%</string>
    <string name="percent_7">7%</string>
    <string name="percent_8">8%</string>
    <string name="percent_9">9%</string>
    <string name="percent_10">10%</string>
    <string name="percent_11">11%</string>
    <string name="percent_12">12%</string>
    <string name="percent_13">13%</string>
    <string name="percent_14">14%</string>
    <string name="percent_15">15%</string>
    <string name="percent_16">16%</string>
    <string name="percent_17">17%</string>
    <string name="percent_18">18%</string>
    <string name="percent_19">19%</string>
    <string name="percent_20">20%</string>
    <string name="percent_21">21%</string>
    <string name="percent_22">22%</string>
    <string name="percent_23">23%</string>
    <string name="percent_24">24%</string>

    <string name="one_month">1个月</string>
    <string name="two_months">2个月</string>
    <string name="three_months">3个月</string>
    <string name="four_months">4个月</string>
    <string name="five_months">5个月</string>
    <string name="six_months">6个月</string>
    <string name="seven_months">7个月</string>
    <string name="eight_months">8个月</string>
    <string name="nine_months">9个月</string>
    <string name="ten_months">10个月</string>
    <string name="eleven_months">11个月</string>
    <string name="twelve_months">12个月</string>
    <string name="thirteen_months">13个月</string>
    <string name="fourteen_months">14个月</string>
    <string name="fifteen_months">15个月</string>
    <string name="sixteen_months">16个月</string>
    <string name="seventeen_moths">17个月</string>
    <string name="eighteen_months">18个月</string>
    <string name="nineteen_months">19个月</string>
    <string name="twenty_months">20个月</string>
    <string name="twenty_one_months">21个月</string>
    <string name="twenty_two_months">22个月</string>
    <string name="twenty_three_months">23个月</string>
    <string name="twenty_four_months">24个月</string>

    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="title_activity_invite_friends_web_view">InviteFriendsWebViewActivity</string>

</resources>
