<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/big_line"
              android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tv1"
        style="@style/LSeparationDistanceStyle"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:textColor="@color/nfont"
        android:text="@string/transfer"/>
    <TextView
        android:id="@+id/tv_one_word"
        style="@style/LSeparationDistanceStyle"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:lineSpacingExtra="11dp"
        android:textSize="12sp"
        android:textColor="@color/nfont"
        android:text="@string/transfer_word1"
        android:layout_below="@+id/tv1"/>
    <TextView
        android:id="@+id/tv3"
        style="@style/LSeparationDistanceStyle"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textColor="@color/nfont"
        android:text="@string/make_collections"
        android:layout_below="@+id/tv_one_word"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="99dp"
        android:layout_height="39dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:background="@drawable/textview_frame_blue"
        android:layout_below="@+id/tv3"
        android:layout_marginTop="15dp"
        android:text="@string/make_collections_name1_word"
        android:textSize="12sp"
        android:textColor="@color/nfont"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_toRightOf="@+id/tv4"
        android:layout_below="@+id/tv3"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="@drawable/textview_frame_black_blue"
        android:layout_marginRight="15dp"
        android:text="@string/make_collections_name1"
        android:textSize="12sp"
        android:textColor="@color/nfont"/>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="99dp"
        android:layout_height="39dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:background="@drawable/textview_frame_blue"
        android:layout_below="@+id/tv4"
        android:text="@string/make_collections_name2_word"
        android:textSize="12sp"
        android:textColor="@color/nfont"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_toRightOf="@+id/tv5"
        android:layout_below="@+id/tv4"
        android:gravity="center"
        android:background="@drawable/textview_frame_black_blue"
        android:layout_marginRight="15dp"
        android:text="@string/make_collections_name2"
        android:textSize="12sp"
        android:textColor="@color/nfont"/>

    <TextView
        android:id="@+id/tv6"
        android:layout_width="99dp"
        android:layout_height="39dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:background="@drawable/textview_frame_blue"
        android:layout_below="@+id/tv5"
        android:text="@string/make_collections_name3_word"
        android:textSize="12sp"
        android:textColor="@color/nfont"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_toRightOf="@+id/tv6"
        android:layout_below="@+id/tv5"
        android:gravity="left|center_vertical"
        android:paddingLeft="25dp"
        android:background="@drawable/textview_frame_black_blue"
        android:layout_marginRight="15dp"
        android:text="@string/make_collections_name3"
        android:textSize="12sp"
        android:textColor="@color/nfont"/>

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="66dp"
        android:layout_height="26dp"
        android:layout_below="@+id/tv5"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="7dp"
        android:text="点击复制"
        android:textSize="12sp"
        android:textColor="@color/number"
        android:gravity="center"
        android:background="@drawable/text_view_type_border_orange"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/tv6"
        android:background="@color/recharge_line"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="11dp"
        android:textSize="12sp"
        android:textColor="@color/nfont"
        android:text="@string/transfer_word2"
        android:layout_below="@+id/view"/>

    </RelativeLayout>
</ScrollView>

</RelativeLayout>
