<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              style="@style/transparent_statusbar_fit"
              android:focusableInTouchMode="true"
              tools:context=".activity.bankActivity.RechargeActivity">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:id="@+id/iv_recharge_back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/back"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/recharge_title"
            android:textColor="@color/font"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/tv_recharge_record"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_record"
            android:textSize="14sp"
            android:textColor="@color/nfont"/>
    </RelativeLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/big_line"
        android:layout_height="40dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/nfont"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="可用余额(元)"/>
        <TextView
            android:id="@+id/tv_money"
            android:textColor="@color/font"
            android:layout_marginLeft="23dp"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="--"/>
    </LinearLayout>

    <TextView
        style="@style/LSeparationDistanceStyle"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/recharge_type"
        android:textSize="14sp"
        android:textColor="@color/nfont"/>
    <View
        style="@style/small_line"
        android:layout_marginLeft="15dp"/>
    
    <RadioGroup
        android:id="@+id/recharge_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_fast"
            style="@style/LSeparationDistanceStyle"
            android:button="@drawable/login_check_box_remember_psw"
            android:paddingLeft="15dp"
            android:text="@string/fast_type"
            android:textSize="14sp"
            android:textColor="@color/nfont"/>
        <RadioButton
            android:id="@+id/rb_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_type"
            android:textSize="14sp"
            android:textColor="@color/nfont"
            android:paddingLeft="15dp"
            android:button="@drawable/login_check_box_remember_psw"
            android:layout_marginLeft="70dp"/>
    </RadioGroup>

    <View
        style="@style/big_line"
        android:layout_marginTop="28dp"/>
    <FrameLayout
        android:id="@+id/recharge_fragment_layout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</LinearLayout>
